--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -8,3 +8,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: psf/black@stable
+        with:
+          options: "--check --verbose"
+          version: "21.5b1"
